<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <android.support.v7.widget.Toolbar
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:title="@string/app_name"
      android:background="?attr/colorPrimary"
      app:titleTextColor="@android:color/background_light">

  </android.support.v7.widget.Toolbar>

  <LinearLayout
      android:id="@+id/imageBackground"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@drawable/background_4"
      android:orientation="vertical" >

    <ViewSwitcher
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@drawable/background_layout_transparent"
        android:elevation="20dp"
        android:padding="7dp"
        android:theme="@style/Base.AlertDialog.AppCompat"
        android:visibility="visible">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:orientation="horizontal">

          <ImageView
              android:id="@+id/imageView3"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_margin="5dp"
              app:srcCompat="@mipmap/ic_launcher" />

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_vertical"
              android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Igor J. Dutra Sanches"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/versionInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

          </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/desc_about" />

        <android.support.v7.widget.ButtonBarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

          <android.support.v7.widget.AppCompatButton
              android:id="@+id/btn_facebook"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="3dp"
              android:layout_marginRight="3dp"
              android:layout_marginTop="3dp"
              android:layout_weight="1"
              android:background="@drawable/btn_face_style"
              android:text="Facebook"
              android:textColor="@android:color/background_light" />

          <android.support.v7.widget.AppCompatButton
              android:id="@+id/btn_fecharPainel"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="3dp"
              android:layout_marginTop="3dp"
              android:background="@drawable/btn_fecha_style"
              android:text="@string/fechar"
              android:textColor="@android:color/background_light" />
        </android.support.v7.widget.ButtonBarLayout>

      </LinearLayout>

    </ViewSwitcher>
  </LinearLayout>
</LinearLayout>
